changed background color to avoid contrast problems

--- a/styles/base.css
+++ b/styles/base.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-  background-color: #4caf50;
+  background-color: #304f3e;
   color: white;
   text-align: center;
   padding: 20px;
